[package]
name = "stringify_interval"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Pulau-Komodo/stringify_interval/"
keywords = ["time", "duration", "interval", "stringifying"]
categories = ["date-and-time"]
description = "Stringify an interval into human-friendly text."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
thiserror = "1.0.56"
